@@ -105,7 +105,6 @@ gimp_scale_tool_init (GimpScaleTool *scale_tool)
   gimp_tool_control_set_tool_cursor (tool->control, GIMP_TOOL_CURSOR_RESIZE);
 
   tr_tool->undo_desc       = Q_("command|Scale");
-  tr_tool->shell_desc      = _("Scaling Information");
   tr_tool->progress_text   = _("Scaling");
 
   tr_tool->use_grid        = TRUE;
