@@ -97,8 +97,6 @@ struct _GimpTransformTool
   GimpTransformDirection  direction;
 
   const gchar    *undo_desc;
-
-  const gchar    *shell_desc;
   const gchar    *progress_text;
 
   GtkWidget      *dialog;
